<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Rss Reader</string>

    <string name="lbl_unread">Unread</string>
    <string name="lbl_feed_hint">Please input the rss url or scan qr code picture(Can be generate by http://www.0-dong.com/qr), a url per line.</string>

    <string name="activity_name_settings">Settings</string>

    <string name="exception_network">Network error！</string>
    <string name="exception_xml_parser">XML parse error！</string>

    <string name="action_add_feed">Add feed</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="action_about">About Me</string>

    <string name="dlg_addFeed_title">URL</string>
    <string name="dlg_exit_message">Are you sure to quit?</string>
    <string name="dlg_error_title">Error!</string>
    <string name="dlg_delete_title">Are you sure to delete this item？</string>


    <string name="btn_ok">Ok</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_no">No</string>
    <string name="btn_on">Enable</string>
    <string name="btn_off">Close</string>
    <string name="btn_scan">Scan</string>
    <string name="btn_add">Add</string>

    <string name="help_title">Help Center</string>
    <string name="help_body">You can input rss url by scan qr code picture(Can be generate at http://www.0-dong.com/qr).</string>
    <string name="about_title">About Me</string>
    <string name="about_body">This software open source(https://github.com/chonglou/androids/tree/master/RssReader). \nIf you have any question, please email me: itpkg8@gmail.com </string>

    <string name="settings_notice">Notice</string>

    <string name="sp_title_settings_refresh">Refresh every</string>
    <integer name="sp_default_settings_refresh">86400</integer>
    <string-array name="sp_itemTexts_settings_refresh">
        <item>10 Minutes</item>
        <item>half an hour</item>
        <item>1 hour</item>
        <item>6 hours</item>
        <item>12 hours</item>
        <item>One day</item>
    </string-array>
    <integer-array name="sp_itemValues_settings_refresh">
        <item>600</item>
        <item>1800</item>
        <item>3600</item>
        <item>21600</item>
        <item>43200</item>
        <item>86400</item>
    </integer-array>

    <string name="sp_title_settings_keep">Keep</string>
    <integer name="sp_default_settings_keep">1000</integer>
    <string-array name="sp_itemTexts_settings_keep">
        <item>50 items</item>
        <item>200 items</item>
        <item>500 items</item>
        <item>1000 items</item>
    </string-array>
    <integer-array name="sp_itemValues_settings_keep">
        <item>50</item>
        <item>200</item>
        <item>500</item>
        <item>1000</item>
    </integer-array>
</resources>