<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/action_refresh"
            android:icon="@drawable/ic_action_refresh"
            android:title="@string/action_refresh"
            android:showAsAction="ifRoom"/>

    <item
            android:id="@+id/action_add_feed"
            android:icon="@drawable/ic_action_add_to_queue"
            android:title="@string/action_add_feed"
            android:showAsAction="ifRoom"/>

    <item
            android:id="@+id/action_settings"
            android:icon="@drawable/ic_action_settings"
            android:title="@string/action_settings"
            android:showAsAction="never"/>

    <item
            android:id="@+id/action_help"
            android:icon="@drawable/ic_action_help"
            android:title="@string/action_help"
            android:showAsAction="never"/>

    <item
            android:id="@+id/action_about"
            android:icon="@drawable/ic_action_about"
            android:title="@string/action_about"
            android:showAsAction="never"/>
</menu>