<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">


    <EditText
            android:id="@+id/feed_add_input"
            android:hint="@string/lbl_feed_hint"
            android:inputType="textUri"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>

    <Button
            android:text="@string/btn_scan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <Button
            android:text="@string/btn_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
</LinearLayout>